fix contact us spacing and timeline

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -8,7 +8,7 @@
     content: "";
     position: absolute;
     top: 0;
-    bottom: 0;
+    bottom: 18%;
     left: 40px;
     width: 2px;
     margin-left: -1.5px;
